2005-05-19 Alain Magloire
	Fixed PR 95943
	* src/org/elcipse/cdt/internla/corext/template/c/TemplateMessages.properties
	* src/org/elcipse/cdt/internla/corext/template/c/TranslationUnitContextType.java

2005-05-18 David Inglis
	Fixed bug # 95556
	* src/org/eclipse/cdt/ui/wizards/NewCProjectWizard.java
	
2005-05-12 Alain Magloire
	Fix multiple warnings, the use of:
	Workbench.setHelp() --> PlatformUI.getWorkbench().getHelpSystem().getHelp()
	Use IShellProvider instead of shell.
	* files too many to enumerate

2005-05-12 Alain Magloire
	Fix PR 93970
	* src/org/eclipse/cdt/internal/ui/cview/SelectionTransferDragAdapter.java
	* src/org/eclipse/cdt/internal/ui/cview/SelectionTransferDropAdapter.java

2005-05-09 Alain Magloire
	Patch from David Daoust, PR 94120
	* src/org/eclipse/cdt/internal/ui/wizards/CWizardRegistry.java

2005-05-06 Alain Magloire
	PR 93902 to fix warnings.
	* plugin.xml
	* src/org/eclipse/cdt/internal/ui/search/FindDeclarationsInWorkingSet.java
	* src/org/eclipse/cdt/internal/ui/search/FindRefsInWorkingSet.java
	* src/org/eclipse/cdt/internal/ui/search/WorkingSetFindAction.java
	* src/org/eclipse/cdt/internal/ui/text/HelpCompletionContribution.java
	* src/org/eclipse/cdt/ui/CUIPlugin.java

2005-05-04 Vladimir Hirsl
	Fix for PR 92599: [Indexer] Remove annotation markers preference from DOMIndexer & friends
	Replaced indexer problem markers property page block for DOMIndexer.
	(from SourceIndexerBlock to NullIndexerBlock).
	Only inclusion not found preprocessor problem markers are going to be
	generated (there isn't an option in UI to disable/enable them yet).

	* plugin.xml
	
2005-04-22 Vladimir Hirsl
	Added per file C/C++ Includes & Symbols property page to display
	per file scanner info (discovered and user specified).
	
	+ icons/obj16/hfolder_quote_obj.gif
	* src/org/eclipse/cdt/internal/ui/CPluginImages.java
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/AbstractPathOptionBlock.java