@@ -19,6 +19,7 @@ ExceptionDialog.seeErrorLogMessage=See error log for more details.
 CEditor.contentassist.noCompletions=No completions available
 CEditor.contentassist.parseError=No completions available due to parse error
 CEditor.contentassist.timeout=Content Assist parsing has timed out
+CEditor.contentassist.badDialect=Unsupported Dialect Exception
 
 CAnnotationHover.multipleMarkers=Multiple markers at this line
 
