@@ -213,6 +213,8 @@ FoldingConfigurationBlock.error.not_exist= The selected folding provider does no
 
 #Code Formatting
 CodeFormatterPreferencePage.title=Code Formatter
+CodeFormatterPreferencePage.selectionName=Formatters:
+CodeFormatterPreferencePage.emptyName=(NONE)
 CodeFormatterPreferencePage.description=Code Formatter
 
 # --- Linked Resources ---
